Add experimental support for wrangler dev/publish file.wasm (#369)
Allow wrangler to work with simple with WebAssembly programs that
  operate on stdin/stdout by generating a js shim that uses
  '@cloudflare/wasi'

  Example:
      cargo new hello_wasm
      cd ./hello_wasm
      cargo build --target wasm32-wasi --release
      wrangler dev target/wasm32-wasi/release/hello_wasm.wasm
      curl http://localhost:8787
        Hello, world!

--- a/packages/wrangler/package.json
+++ b/packages/wrangler/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "esbuild": "0.14.14",
     "miniflare": "2.3.0",
+    "@cloudflare/workers-wasi": "0.0.5",
     "path-to-regexp": "^6.2.0",
     "semiver": "^1.1.0",
     "xxhash-wasm": "^1.0.1"
